<resources>
    <string name="Is_arabic">false</string>
    <string name="app_name">Ritmoli</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="image">Image</string>
    <string name="text">Text</string>
    <string name="retry">Retry</string>
    <string name="Lbl_Empty">Empty</string>
    <string name="Lbl_Loading">Loading</string>
    <string name="Lbl_LoadingData">Loading Data..</string>
    <string name="Lbl_Comment">Comment</string>
    <string name="Lbl_Videos">Videos</string>
    <string name="Lbl_Views">Views</string>
    <string name="noInternet">Internet not available, Please check your internet connectivity and try again.</string>
    <string name="Lbl_aboutMe">About Me</string>
    <string name="Lbl_About">About</string>
    <string name="Lbl_Error">Error</string>
    <string name="Lbl_Ok">OK</string>
    <string name="Lbl_Security">Security</string>
    <string name="Lbl_Done">Done</string>
    <string name="Lbl_Deleted">Deleted</string>
    <string name="Lbl_Delete">Delete</string>
    <string name="Lbl_Submit">Submit</string>
    <string name="Lbl_Cancel">Cancel</string>
    <string name="Lbl_Yes">Yes</string>
    <string name="Lbl_No">No</string>
    <string name="Lbl_Warning">Warning</string>
    <string name="Lbl_Changed">Changed</string>
    <string name="Lbl_Crop">Crop</string>
    <string name="Lbl_Report">Report</string>
    <string name="Lbl_Quality">Quality</string>
    <string name="Lbl_Help_feedback">Help &amp; Feedback</string>
    <string name="Lbl_Make_video_offline">Make video offline</string>
    <string name="Lbl_Share">Share</string>
    <string name="Lbl_InviteSMSText_1">Hi let is meet on</string>
    <string name="Lbl_InviteSMSText_2">for your smart phone</string>
    <string name="Lbl_Success">Success</string>
    <string name="Lbl_Offline_Mode">Offline Mode</string>
    <string name="Lbl_Cover">Cover</string>
    <string name="Lbl_Avatar">Avatar</string>
    <string name="Lbl_Close">Close</string>
    <string name="Lbl_With">With</string>
    <string name="Lbl_At">At</string>
    <string name="Lbl_SelectPictures">Select Pictures</string>
    <string name="Lbl_SelectImage">Select Image</string>
    <string name="Lbl_SelectFile">Select File</string>
    <string name="Lbl_SelectGif">Select Gif</string>
    <string name="Lbl_Unknown">Unknown</string>
    <string name="Lbl_ReadMore">Read More</string>
    <string name="Lbl_ReadLess">Read Less</string>
    <string name="Lbl_Description">Description</string>
    <string name="Lbl_Published_on">Published on</string>
    <string name="Lbl_I_agree_to_the">I agree to the</string>
    <string name="Lbl_Last_seen">Last seen</string>
    <string name="Lbl_Create_Account">Create Account</string>
    <string name="Lbl_SignUp">Sign Up</string>
    <string name="Lbl_Like">Like</string>
    <string name="Lbl_Likes">Likes</string>
    <string name="Lbl_Create">Create</string>
    <string name="Lbl_Users">Users</string>
    <string name="Lbl_Send">Send</string>
    <string name="Lbl_Male">Male</string>
    <string name="Lbl_Female">Female</string>
    <string name="Lbl_Public">Public</string>
    <string name="Lbl_Private">Private</string>
    <string name="Lbl_Save">Save</string>
    <string name="Lbl_Country">Country</string>
    <string name="Lbl_Settings">Settings</string>
    <string name="Lbl_Send_to">Send to</string>
    <string name="Lbl_Copy">Copy</string>
    <string name="Lbl_CopyLinkToProfile">Copy Link To Profile</string>
    <string name="Lbl_Type">Type</string>
    <string name="Lbl_Remember">Remember</string>
    <string name="Lbl_Online">Online</string>
    <string name="Lbl_Processing">Processing...</string>
    <string name="Lbl_Created">Created</string>
    <string name="Lbl_By">By</string>
    <string name="Lbl_Selected">Selected</string>
    <string name="Lbl_Music">Music</string>
    <string name="Lbl_FirstTitle">Join us and listen to free music and podcasts on</string>
    <string name="Lbl_FirstSubTitle">Discover, stream, and share a constantly expanding mix of music from emerging and major artists around the world.</string>
    <string name="Lbl_FirstName">Full Name</string>
    <string name="Lbl_LastName">Last Name</string>
    <string name="Lbl_Username">Username</string>
    <string name="Lbl_Email">Email</string>
    <string name="Lbl_Login">Login</string>
    <string name="Lbl_Log_In">Log In</string>
    <string name="Lbl_Register">Register</string>
    <string name="Lbl_SignIn">Sign in</string>
    <string name="Lbl_DontHaveAnAccount">"Don&apos;t Have an account?"</string>
    <string name="Lbl_Or">OR</string>
    <string name="Lbl_Please_write_your_email">Please write your email</string>
    <string name="Lbl_Null_Data_User">Null data user</string>
    <string name="Lbl_Create_An_Account">Create An Account</string>
    <string name="Lbl_By_registering_you_agree_to_our">By registering you agree to our</string>
    <string name="Lbl_Terms_of_service">Terms of service</string>
    <string name="Lbl_Already_Have_an_Account">Already Have an Account</string>
    <string name="Lbl_Error_Register_password">Register Not Correct, error Password</string>
    <string name="Lbl_Error_Login">Login Not Correct, error Username Or Password</string>
    <string name="Lbl_VerifyRegistration">Registration successful! We have sent you an email, Please check your inbox/spam to verify your account.</string>
    <string name="Lbl_I_NewUser">"I'M NEW USER"</string>
    <string name="Lbl_I_have_account">"I have account. Enter"</string>
    <string name="Lbl_Skip">SKIP</string>
    <string name="Lbl_Password">Password</string>
    <string name="Lbl_ConfirmPassword">Confirm Password</string>
    <string name="Lbl_Forget_password">Forgot password ?</string>
    <string name="Lbl_Forgot_your_password_DontWorry">"Don&apos;t worry type your email here and we will recover it for you."</string>
    <string name="Lbl_Change_Password">Change Password</string>
    <string name="Lbl_Current_Password">Current Password</string>
    <string name="Lbl_New_Password">New password</string>
    <string name="Lbl_Repeat_password">Repeat password</string>
    <string name="Lbl_Your_password_dont_match">Your password does not match</string>
    <string name="Lbl_Enter_Password">Enter your password here</string>
    <string name="Lbl_Change_your_password">Change your password</string>
    <string name="Lbl_Please_enter_your_email_address">Please enter your email address</string>
    <string name="Lbl_We_will_send_you_link_to_reset_password">We will send you a link to reset password.</string>
    <string name="Lbl_If_you_forgot_your_password">If you forgot your password, you can reset it from here.</string>
    <string name="Lbl_Please_confirm_your_password">Error, Please confirm your password</string>
    <string name="Lbl_FinishButton_WalkTroutPage">Get Started</string>
    <string name="Lbl_Title_page1">Music</string>
    <string name="Lbl_Description_page1">Listen Music Everywhere, Anytime</string>
    <string name="Lbl_Title_page2">Playlist</string>
    <string name="Lbl_Description_page2">Create Playlist with any song, On-The-Go</string>
    <string name="Lbl_Title_page3">Calling all creators</string>
    <string name="Lbl_Description_page3">Get on to connect with fans, share your sounds, and grow your audience</string>
    <string name="Lbl_ProfileInfo">Profile Info</string>
    <string name="Lbl_InformationAboutYourProfile">Information about your profile</string>
    <string name="Lbl_Bio">Bio</string>
    <string name="Lbl_ChooseYourCountry">Choose your country</string>
    <string name="Lbl_ChooseYourAge">Choose your age</string>
    <string name="Lbl_Location">Location</string>
    <string name="Lbl_Followers">Followers</string>
    <string name="Lbl_Following">Following</string>
    <string name="Lbl_Tracks">Tracks</string>
    <string name="Lbl_Follow">Follow</string>
    <string name="Lbl_Friends">Friends</string>
    <string name="Lbl_People_Following">People Following</string>
    <string name="Lbl_People_Followers">People Followers</string>
    <string name="Lbl_Gender">Gender</string>
    <string name="Lbl_FullName">Full Name</string>
    <string name="Lbl_NoMoreUser">No more user found</string>
    <string name="Lbl_ChangeCoverImage">Change cover image</string>
    <string name="Lbl_HasNotAnyInfo">Has not any info</string>
    <string name="Lbl_justNow">Just now</string>
    <string name="Lbl_hours">Hours ago</string>
    <string name="Lbl_days">Days ago</string>
    <string name="Lbl_month">Month ago</string>
    <string name="Lbl_minutes">Minutes ago</string>
    <string name="Lbl_seconds">Seconds ago</string>
    <string name="Lbl_year">Year ago</string>
    <string name="Lbl_CutHours">H</string>
    <string name="Lbl_CutDays">D</string>
    <string name="Lbl_CutMonth">M</string>
    <string name="Lbl_CutMinutes">Min</string>
    <string name="Lbl_CutSeconds">Sec</string>
    <string name="Lbl_CutYear">Y</string>
    <string name="Lbl_about_minute">about a minute ago</string>
    <string name="Lbl_about_hour">about an hour ago</string>
    <string name="Lbl_yesterday">yesterday</string>
    <string name="Lbl_about_month">about a month ago</string>
    <string name="Lbl_about_year">about a year ago</string>
    <string name="Lbl_Permission_is_denied">"Sorry: You cannot proceed with your action if you don&apos;t allow"</string>
    <string name="Lbl_something_went_wrong">Check your credentials something went wrong</string>
    <string name="Lbl_CheckYourInternetConnection">Please check your internet connection</string>
    <string name="Lbl_VerificationFailed">Verification failed</string>
    <string name="Lbl_You_will_be_logged">You will be logged out now, see you later</string>
    <string name="Lbl_Are_you_logout">Are you sure you went to log out?</string>
    <string name="Lbl_Text_copied">Text copied to clipboard</string>
    <string name="Lbl_Text_report">It has been sent reporting</string>
    <string name="Lbl_PleaseAddPhoneNumberCorrectly">Please add the phone number correctly</string>
    <string name="Lbl_Sent_successfully_followed">You have followed the user successfully</string>
    <string name="Lbl_Sent_successfully_Unfollowed">The user has been UnFollowed</string>
    <string name="Lbl_NoSongSelected">No song selected</string>
    <string name="Lbl_Feed">Feed</string>
    <string name="Lbl_Playlists">Playlists</string>
    <string name="Lbl_Browse">Browse</string>
    <string name="Lbl_Library">Library</string>
    <string name="Lbl_Profile">Profile</string>
    <string name="Lbl_Notifications">Notifications</string>
    <string name="Lbl_messages">Messages</string>
    <string name="Lbl_Search">Search</string>
    <string name="Btn_Send">Send</string>
    <string name="Btn_Import">Import</string>
    <string name="Btn_Upload">Upload</string>
    <string name="Lbl_Interest">Interest</string>
    <string name="Lbl_SelectYourMusicPreference">Select your music preference</string>
    <string name="Lbl_General">General</string>
    <string name="Lbl_MyAccount">My Account</string>
    <string name="Lbl_Support">Support</string>
    <string name="Lbl_Help">Help</string>
    <string name="Lbl_Logout">Logout</string>
    <string name="Lbl_BlockedUsers">Blocked Users</string>
    <string name="Lbl_DeleteAccount">Delete account</string>
    <string name="Lbl_Go_Pro">Go Pro</string>
    <string name="Lbl_Withdrawals">Withdrawals</string>
    <string name="Lbl_Light">Light</string>
    <string name="Lbl_EditProfileInfo">Edit Profile Info</string>
    <string name="Lbl_Display">Display</string>
    <string name="Lbl_Theme">Theme</string>
    <string name="Lbl_TwoFactor">Two-factor authentication</string>
    <string name="Lbl_ManageSessions">Manage Sessions</string>
    <string name="Lbl_Article">Articles</string>
</resources>