<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/backgroundGradation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/gnt_black" />
    <ImageView
        android:id="@+id/Logoplace"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:src="@drawable/logoletra"
        android:scaleType="fitXY" />
    <LinearLayout
        android:id="@+id/mainloginliner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_centerInParent="true"> 
        <TextView
			android:id="@+id/firstTitle" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lbl_FirstTitle"
            android:textSize="25sp"
			android:layout_marginStart="20dp"
			android:layout_marginEnd="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lbl_FirstSubTitle"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="5dp"
			android:visibility="gone"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#BDBDBD" />
        <View
            android:layout_height="50dp"
            android:layout_width="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true">
        <Button
            android:text="@string/Lbl_Register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/RegisterButton"
            android:background="@xml/button_bg_secound"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp" />
        <Button
            android:text="@string/Lbl_Login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/LoginButton"
			android:background="@xml/background_login" 
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            android:textSize="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp" />

         <Button
            android:text="@string/Lbl_Skip"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/SkipButton"
            android:textColor="@color/white"
            android:background="@xml/other_acc_button_bg"
            android:layout_marginTop="8dp"
            android:textSize="15dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp" />

        <View
            android:layout_height="50dp"
            android:layout_width="match_parent" />

    </LinearLayout>

</RelativeLayout>