<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="?attr/colorPrimary"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:theme="@style/ToolbarTheme"
        android:layout_gravity="top"
        app:layout_collapseMode="pin"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        android:background="@drawable/linear_gradient_drawable"
        android:elevation="2dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lbl_Save"
            android:layout_gravity="end"
            android:textSize="15sp"
            android:padding="15dp"
            android:layout_marginEnd="12dp"
            android:id="@+id/toolbar_title" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:clipToPadding="false"
            android:scrollbars="none"
            android:scrollingCache="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/lyt_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">
                <EditText
                    android:id="@+id/currentPasswordText"
                    style="@style/EditTextNormalStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittextstyleone"
                    android:hint="@string/Lbl_Current_Password"
                    android:textSize="15sp"
                    android:inputType="textPassword" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />
                <EditText
                    android:id="@+id/newPsswordText"
                    style="@style/EditTextNormalStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittextstyleone"
                    android:hint="@string/Lbl_New_Password"
                    android:textSize="15sp"
                    android:inputType="textPassword" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />
                <EditText
                    android:id="@+id/repeatPasswordText"
                    style="@style/EditTextNormalStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittextstyleone"
                    android:hint="@string/Lbl_Repeat_password"
                    android:textSize="15sp"
                    android:inputType="textPassword" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />
                <TextView
                    android:id="@+id/linkText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="2"
                    android:padding="5dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:text="@string/Lbl_If_you_forgot_your_password"
                    android:textSize="13dp"
                    android:textAlignment="textStart" />
                <!--<DeepSound.Helpers.Ads.TemplateView
                   android:id="@+id/my_template"
                   android:padding="8dp"
                   app:gnt_template_type="@layout/gnt_medium_template_view"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="bottom"
                   android:visibility="gone"
                   android:layout_alignParentBottom="true"
                   android:layout_centerHorizontal="true" />-->
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>